samples/_failures_safe/1761410469_5f1318_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e82b56d8.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_e82b56d8.c:138:9: error: expected expression at end of input
  138 |         long long det = (long long)matrix[0][0] * matrix[
      |         ^~~~
./samples/SAFE/__tmp_e82b56d8.c:138:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e82b56d8.c:138:9: error: expected declaration or statement at end of input
